# TALEWEAVERS2

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile.base  Dockerfile.python  README.md  audit_mountains.py  blueprint.txt  body spell2.docx  bodyspells1.docx  build_database.py  crucial.md  docker-compose.yml  extracted_spells.txt  extraction.txt  god_engine_overrides.json  launch_taleweavers.ps1  lore_dump.json  run_all.bat  saga_registry.json  start_servers.py  tech_debt_report.md  test.js  test_character_req.json  verify_ports.py
Module_4_Encounter_Engine/: main.py  main.py.bak  schemas.py  test_verify.py
TALEWEAVERS/: Building a Standalone VTT Player.docx  Designing the Campaign Weaver Module.docx  Game Engine_ Skill & Combat Modules.docx  (+4 more)
saga_architect/: CMakeLists.txt  Dockerfile  Saga_Master_World.json  architect_config.json  architect_config_test.json  build_engine.ps1  build_log.txt  generate_macro_image.py  logic_audit.py  main.py  main.py.bak
saga_architect/data/: biology.json  factions.json  resources.json
saga_architect/src/: main.cpp  main.cpp.bak2  main.cpp.bak3  main.cpp.bak4  main.cpp.bak5
saga_architect/src/core/: Types.h  Types.h.bak2
saga_architect/src/io/: Exporter.cpp
saga_architect/src/map/: VoronoiGen.cpp  VoronoiGen.cpp.bak  VoronoiGen.cpp.bak2  VoronoiGen.cpp.bak3  VoronoiGen_backup_pre_edit.cpp
saga_architect/src/simulation/: AutoPopulate.cpp  AutoPopulate.cpp.bak2  EconomyEngine.cpp  EconomyEngine.h  EntityEngine.cpp  EntityEngine.h  ResourcePopulator.cpp  VisibilityEngine.cpp  VisibilityEngine.h
(+395 files in other folders)
